Fix Simple Sign up layout on mobile

--- a/assets/css/pages/signup.scss
+++ b/assets/css/pages/signup.scss
@@ -66,7 +66,7 @@ section {
 
 @media (max-width: 768px) {
     #register {
-        margin-top: -500px;
+        margin-top: -370px;
     }
     .background .topheader {
         top: 0px;
